--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
     "target": "ES2020",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
+  "allowImportingTsExtensions": true,
+  "noEmit": true,
     "strict": true,
     "esModuleInterop": true,
     "outDir": "dist",
